Refactored: Better abstraction