@@ -5,6 +5,7 @@ import com.order.grpc.OrderItemResponse;
 import com.order.model.money.Money;
 import com.order.model.order.Order;
 import com.order.model.order.OrderItem;
+import com.order.repository.OrderItemRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -13,6 +14,12 @@ import java.util.stream.Collectors;
 
 @Service
 public class OrderItemService {
+    private final OrderItemRepository orderItemRepository;
+
+    public OrderItemService(OrderItemRepository orderItemRepository) {
+        this.orderItemRepository = orderItemRepository;
+    }
+
     public List<OrderItemResponse> mapOrderItems(Set<OrderItem> orderItems) {
         return orderItems.stream()
                 .map(item -> OrderItemResponse.newBuilder()
@@ -24,13 +31,15 @@ public class OrderItemService {
     }
 
     public List<OrderItem> createOrderItems(List<OrderItemRequest> orderItemRequests, Order order){
-        return orderItemRequests.stream().map(orderItemRequest -> {
+        List<OrderItem> items = orderItemRequests.stream().map(orderItemRequest -> {
             OrderItem orderItem = new OrderItem();
             orderItem.setOrder(order);
             orderItem.setOrderItemExternalId(orderItemRequest.getItemId());
             orderItem.setQuantity(orderItemRequest.getQuantity());
             orderItem.setUnitPrice(new Money(orderItemRequest.getUnitPrice()));
             return orderItem;
-        }).collect(Collectors.toList());
+        }).toList();
+        orderItemRepository.saveAll(items);
+        return items;
     }
 }
